[project]
name = "stripe-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Bittencourt",email = "lucascafieiro@hotmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "stripe (>=15.1.0,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
