[project]
name = "stripe-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Bittencourt",email = "lucascafieiro@hotmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "stripe (>=15.1.0,<16.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "slowapi (>=0.1.9,<0.2.0) ; python_version >= \"3.7\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.12,<0.16.0)"
]

[tool.poetry]
packages = [{include = "stripe_integration", from = "src"}]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
